--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://wicky-info.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
+title: wicky-info
+subtitle: tempat nongkrong sambil ngopi.
 author: Wicky Andrean
 simple_search: https://www.google.com/search
 description:
@@ -27,7 +27,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:title/
 source: source
 destination: public
 plugins: plugins
@@ -70,7 +70,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: 
 twitter_tweet_button: true
 
 # Google +1
@@ -91,11 +91,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: wicky
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
