--- a/_config.yml
+++ b/_config.yml
@@ -65,12 +65,12 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 
 # Github repositories
 github_user: wicky-info
-github_repo_count: 0
+github_repo_count: true
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user: 
+twitter_user: WickyAndPallo
 twitter_tweet_button: true
 
 # Google +1
